--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">  
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <!-- <link rel="stylesheet" href="../src/assets/dist/css/swiper.min.css"> -->
     <title>鲸小爱英语</title>
   </head>
   <body>
@@ -13,11 +15,14 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-    <script src="http://res2.wx.qq.com/open/js/jweixin-1.4.0.js" type="text/javascript"></script>
+    <script src="https://res2.wx.qq.com/open/js/jweixin-1.4.0.js" type="text/javascript"></script>
     <script type="text/javascript">
+     
       define = null;
       require = null;
     </script>
+    <!-- <script src="autotrack.js"></script> -->
+    <!-- <script src="../src/assets/dist/js/swiper.min.js"></script> -->
   </body>
 </html>
 
